# bachelorarbeit

./: README.md
examples/: CMakeLists.txt
examples/bachelor_thesis/: .gitignore  CMakeLists.txt
examples/bachelor_thesis/executables/: generate_adjacent_prisms.cc  generate_cylinder.cc  generate_ditorus.cc  generate_prism.cc  generate_spheritorus.cc
examples/bachelor_thesis/header/: base_shape_generator.hh  cartesian_product.hh  homology.hh  nd_subdivision.hh  orientation.hh  ovm_nd_types.hh  projection.hh
examples/bachelor_thesis/validation/: mesh_quality_assessment.cc  quality_metrics.hh  results_dir.hh  schwarz_lantern.cc  timing.cc  validation.hh  visualize_4d.hh
